change title to Friendly Potato

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!doctype HTML>
 <html>
   <head>
-    <title>Potato | Betamore</title>
+    <title>Friendly Potato | Betamore</title>
     <meta name="description" content="Betamore Beta Potato">
     <link rel="stylesheets" href="css/main.css">
   </head>
 
 <body>
   <nav><!--Add whatever navigation tools here --> </nav>
-
 </body>
 
 
