add line items for navigation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 
 <body>
   <nav><!--Add whatever navigation tools here --> </nav>
+    <ul>
+      <li>ABOUT</li>
+      <li>FEATURES</li>
+      <li>NUTRITION</li>
+      <li>BUY IT NOW</li>
+    </ul>
+  </nav>
 </body>
 
 
