make and fill sections

--- a/index.html
+++ b/index.html
@@ -7,14 +7,49 @@
   </head>
 
 <body>
-  <nav><!--Add whatever navigation tools here --> </nav>
-    <ul>
-      <li>ABOUT</li>
-      <li>FEATURES</li>
-      <li>NUTRITION</li>
-      <li>BUY IT NOW</li>
-    </ul>
-  </nav>
+  <header>
+    <nav><!--Add whatever navigation tools here --> </nav>
+      <ul>
+        <li>ABOUT</li>
+        <li>FEATURES</li>
+        <li>NUTRITION</li>
+        <li>BUY IT NOW</li>
+      </ul>
+    </nav>
+  </header>
+
+  <section>
+    <h1>"Sweet, Nutritious, and Delicious"</h1>
+    <p>The key to happiness is hidden in the Potato&trade;</p>
+  </section>
+
+  <section>
+    <h1>Different shapes and sizes</h1>
+    <p>Potato&trade; comes in many different unique shapes and sizes. Find the one that fits your personal preferences.</p>
+  </section>
+
+  <section>
+    <h1>Is Potato&trade; healthy? Yes it is!</h1>
+    <p>The majority of carbohydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
+  </section>
+
+  <section>
+    <h1>Easily Transformable</h1>
+    <p>Because of its unique structure. Potato&trade; is easily usable and transformable in any way you can think of.</p>
+  </section>
+
+  <section>
+    <h1>100% Customer satisfaction!</h1>
+    <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
+  </section>
+
+  <section>
+    <h1>Order one (or more) today!</h1>
+    <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
+  </section>
+
+<footer></footer>
+
 </body>
 
 
