made edits to nav li items and implemented a href tags to index.html

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <head>
     <title>Friendly Potato | Betamore</title>
     <meta name="description" content="Betamore Beta Potato">
-    <link rel="stylesheets" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
 <body>
   <header>
-    <nav><!--Add whatever navigation tools here --> </nav>
+    <div class="logo">Potato Logo Here</div>
+    <nav><!--Add whatever navigation tools here -->
       <ul>
-        <li>ABOUT</li>
-        <li>FEATURES</li>
-        <li>NUTRITION</li>
-        <li>BUY IT NOW</li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Nutrition</a></li>
+        <li><a class="buy-now" href="#">Buy It Now</a></li>
       </ul>
     </nav>
   </header>
