add header and splash styles

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
 
 <body>
-  <header>
-    <div class="logo">Potato Logo Here</div>
+  <header class="clearfix">
+<h1 class="logo">Potato&trade;</h1>
     <nav><!--Add whatever navigation tools here -->
       <ul>
         <li><a href="#">About</a></li>
@@ -19,7 +19,7 @@
     </nav>
   </header>
 
-  <section>
+  <section class="splash">
     <h1>"Sweet, Nutritious, and Delicious"</h1>
     <p>The key to happiness is hidden in the Potato&trade;</p>
   </section>
