clean up section height and css layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <section class="splash">
     <h1>"Sweet, Nutritious, and Delicious"</h1>
-    <p>The key to happiness is hidden in the Potato&trade;</p>
+    <p>The key to happiness is hidden in the <span>Potato&trade;</span></p>
   </section>
 
   <section>
