--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
     <p>The key to happiness is hidden in the <span>Potato&trade;</span></p>
   </section>
 
-  <section>
+  <section class="transparent">
     <h1>Different shapes and sizes</h1>
     <p>Potato&trade; comes in many different unique shapes and sizes. Find the one that fits your personal preferences.</p>
   </section>
 
-  <section>
+  <section class="nutrition">
     <h1>Is Potato&trade; healthy? Yes it is!</h1>
     <p>The majority of carbohydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
   </section>
 
-  <section>
+  <section class="transform">
     <h1>Easily Transformable</h1>
     <p>Because of its unique structure. Potato&trade; is easily usable and transformable in any way you can think of.</p>
   </section>
 
-  <section>
+  <section class="transparent">
     <h1>100% Customer satisfaction!</h1>
     <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
   </section>
 
-  <section>
+  <section class="buy">
     <h1>Order one (or more) today!</h1>
     <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
   </section>
