added columns in buy section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,34 @@
 
   <section class="buy">
     <h1>Order one (or more) today!</h1>
-    <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
+    <div>
+			<div>
+				<h2>Potato&trade; Lite</h2>
+				<ul>
+					<li>Small and compact</li>
+					<li>Highly portable</li>
+					<li>Unapologetically delicious</li>
+				</ul>
+			</div>
+			<div>
+				<h2>Potato&trade; Pro</h2>
+				<ul>
+					<li>Highly portable</li>
+					<li>Easily sliceable</li>
+					<li>Unapologetically delicious</li>
+					<li>Very nutritious</li>
+				</ul>
+			</div>
+			<div>
+				<h2>Potato&trade; Team</h2>
+				<ul>
+					<li>Ideal for bigger groups</li>
+					<li>Easily sliceable</li>
+					<li>Unapologetically delicious</li>
+					<li>Very nutritious</li>
+				</ul>
+			</div>
+		</div>
   </section>
 
 <footer></footer>
