create buttons in buy section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 					<li>Highly portable</li>
 					<li>Unapologetically delicious</li>
 				</ul>
+				<div class="button">Order</div>
 			</div>
 			<div>
 				<h2><span>Potato&trade;</span> Pro</h2>
@@ -63,6 +64,7 @@
 					<li>Unapologetically delicious</li>
 					<li>Very nutritious</li>
 				</ul>
+				<div class="button">Order</div>
 			</div>
 			<div>
 				<h2><span>Potato&trade;</span> Team</h2>
@@ -72,11 +74,15 @@
 					<li>Unapologetically delicious</li>
 					<li>Very nutritious</li>
 				</ul>
+				<div class="button">Order</div>
 			</div>
 		</div>
   </section>
 
-<footer></footer>
+<footer>Since you came all the way to read this have a potato for free.
+
+
+</footer>
 
 </body>
 
