add prices and styles

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 					<li>Unapologetically delicious</li>
 				</ul>
 				<div class="button">Order</div>
+				<p>starting at $9.99</p>
 			</div>
 			<div>
 				<h2><span>Potato&trade;</span> Pro</h2>
@@ -64,7 +65,9 @@
 					<li>Unapologetically delicious</li>
 					<li>Very nutritious</li>
 				</ul>
+				
 				<div class="button">Order</div>
+				<p>starting at $19.99</p>
 			</div>
 			<div>
 				<h2><span>Potato&trade;</span> Team</h2>
@@ -75,6 +78,7 @@
 					<li>Very nutritious</li>
 				</ul>
 				<div class="button">Order</div>
+				<p>starting at $39.99</p>
 			</div>
 		</div>
   </section>
