--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <title>Friendly Potato | Betamore</title>
     <meta name="description" content="Betamore Beta Potato">
     <link rel="stylesheet" href="css/main.css">
+ 
   </head>
 
 <body>
   <header class="clearfix">
-<h1 class="logo">Potato&trade;</h1>
+  	<h1 class="logo">Potato&trade;</h1>
     <nav><!--Add whatever navigation tools here -->
       <ul>
         <li><a href="#about">About</a></li>
@@ -92,8 +93,9 @@
 
 <footer>
 
-
 </footer>
+
+<script src="js/script.js"></script> 
 
 </body>
 
