add anchor links to index.html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 <body>
   <header class="clearfix">
-<h1 class="logo">Potato&trade;</h1>
+    <a href="/"><h1 class="logo">Potato&trade;</h1></a>
     <nav><!--Add whatever navigation tools here -->
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Nutrition</a></li>
-        <li><a class="buy-now" href="#">Buy It Now</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#nutrition">Nutrition</a></li>
+        <li><a class="buy-now" href="#buy">Buy It Now</a></li>
       </ul>
     </nav>
   </header>
@@ -24,17 +24,17 @@
     <p>The key to happiness is hidden in the <span>Potato&trade;</span></p>
   </section>
 
-  <section class="transparent">
+  <a name="about"><section class="transparent"></a>
     <h1>Different shapes and sizes</h1>
     <p><span>Potato&trade;</span> comes in many different unique shapes and sizes. Find the one that fits your personal preferences.</p>
   </section>
 
-  <section class="nutrition">
+  <a name="nutrition"><section class="nutrition"></a>
     <h1>Is Potato&trade; healthy? Yes it is!</h1>
     <p>The majority of carbohydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
   </section>
 
-  <section class="transform">
+  <a name="features"><section class="transform"></a>
     <h1>Easily Transformable</h1>
     <p>Because of its unique structure. <span>Potato&trade;</span> is easily usable and transformable in any way you can think of.</p>
   </section>
@@ -44,7 +44,7 @@
     <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
   </section>
 
-  <section  class="buy">
+  <a name="buy"><section class="buy"></a>
     <h1>Order one (or more) today!</h1>
     <div>
 			<div>
@@ -65,7 +65,7 @@
 					<li>Unapologetically delicious</li>
 					<li>Very nutritious</li>
 				</ul>
-				
+
 				<div class="button">Order</div>
 				<p>starting at $19.99</p>
 			</div>
