fix conflicts/issues that occured after laster merge on index.html

--- a/index.html
+++ b/index.html
@@ -4,26 +4,18 @@
     <title>Friendly Potato | Betamore</title>
     <meta name="description" content="Betamore Beta Potato">
     <link rel="stylesheet" href="css/main.css">
- 
+
   </head>
 
 <body>
   <header class="clearfix">
-<<<<<<< HEAD
-    <a href="/"><h1 class="logo">Potato&trade;</h1></a>
-=======
   	<h1 class="logo">Potato&trade;</h1>
->>>>>>> upstream/master
     <nav><!--Add whatever navigation tools here -->
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#nutrition">Nutrition</a></li>
-<<<<<<< HEAD
-        <li><a class="buy-now" href="#buy">Buy It Now</a></li>
-=======
         <li><a class="buy-now" href="#buynow">Buy It Now</a></li>
->>>>>>> upstream/master
       </ul>
     </nav>
   </header>
@@ -34,28 +26,20 @@
     <img src="assets/images/potato1.png"/>
   </section>
 
-<<<<<<< HEAD
-  <a name="about"><section class="transparent"></a>
-=======
   <section id="about" class="transparent">
->>>>>>> upstream/master
     <h1>Different shapes and sizes</h1>
     <p><span>Potato&trade;</span> comes in many different unique shapes and sizes. Find the one that fits your personal preferences.</p>
     <img  src="assets/images/potatoline.png"/>
     <img src="assets/images/potato2.png"/>
   </section>
 
-<<<<<<< HEAD
-  <a name="nutrition"><section class="nutrition"></a>
-=======
   <section id="nutrition" class="nutrition">
->>>>>>> upstream/master
     <h1>Is Potato&trade; healthy? Yes it is!</h1>
     <p>The majority of carbohydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
     <img src="assets/images/potato.png"/>
   </section>
 
-  <a name="features"><section class="transform"></a>
+  <section class="transform">
     <h1>Easily Transformable</h1>
     <p>Because of its unique structure. <span>Potato&trade;</span> is easily usable and transformable in any way you can think of.</p>
   </section>
@@ -65,11 +49,7 @@
     <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
   </section>
 
-<<<<<<< HEAD
-  <a name="buy"><section class="buy"></a>
-=======
   <section id="buynow"  class="buy">
->>>>>>> upstream/master
     <h1>Order one (or more) today!</h1>
     <div>
 			<div>
@@ -115,7 +95,7 @@
 
 </footer>
 
-<script src="js/script.js"></script> 
+<script src="js/script.js"></script>
 
 </body>
 
