--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <img src="assets/images/potato.png"/>
   </section>
 
-  <section class="transform">
+  <section id="features" class="transform">
     <h1>Easily Transformable</h1>
     <p>Because of its unique structure. <span>Potato&trade;</span> is easily usable and transformable in any way you can think of.</p>
   </section>
