add anchor link to logo that takes users back to the top of the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header class="clearfix">
-  	<h1 class="logo">Potato&trade;</h1>
+  	<a href="/"><h1 class="logo">Potato&trade;</h1></a>
     <nav><!--Add whatever navigation tools here -->
       <ul>
         <li><a href="#about">About</a></li>
