try to set up JS smoothscroll in script.js, but couldn't get it to work

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<a href="/"><h1 class="logo">Potato&trade;</h1></a>
     <nav><!--Add whatever navigation tools here -->
       <ul>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about" onclick="aboutScroll()">About</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#nutrition">Nutrition</a></li>
         <li><a class="buy-now" href="#buynow">Buy It Now</a></li>
