--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
 
   <section id="about" class="transparent">
     <h1>Different shapes and sizes</h1>
-    <p><span>Potato&trade;</span> comes in many different unique shapes and sizes. Find the one that fits your personal preferences.</p>
+    <p><span>Potato&trade;</span> comes in many different unique shapes and sizes.<br> Find the one that fits your personal preferences.</p>
     <img  src="assets/images/potatoline.png"/>
     <img src="assets/images/potato2.png"/>
   </section>
 
   <section id="nutrition" class="nutrition">
     <h1>Is Potato&trade; healthy? Yes it is!</h1>
-    <p>The majority of carbohydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
+    <p>The majority of carbohydrates in potatoes are complex<Br>carbohydrates, your body's main energy source.</p>
     <img class="nutrition-potato" src="assets/images/potato.png"/>
    
   </section>
 
   <section id="features" class="transform">
     <h1>Easily Transformable</h1>
-    <p>Because of its unique structure. <span>Potato&trade;</span> is easily usable and transformable in any way you can think of.</p>
+    <p>Because of its unique structure. <span>Potato&trade;</span> is easily<Br>usable and transformable in any way you can think of.</p>
   
 
   </section>
@@ -64,7 +64,7 @@
 				</ul>
 				<div class="button">Order</div>
 				<p>starting at $9.99</p>
-				<img src="assets/images/potatosmall.png"/>
+				<img class="potato-lite" src="assets/images/potatosmall.png"/>
 			</div>
 			<div>
 				<h2><span>Potato&trade;</span> Pro</h2>
@@ -77,7 +77,7 @@
 
 				<div class="button">Order</div>
 				<p>starting at $19.99</p>
-				<img src="assets/images/potato-3.png"/>
+				<img class="potato-pro" src="assets/images/potato-3.png"/>
 			</div>
 			<div>
 				<h2><span>Potato&trade;</span> Team</h2>
@@ -89,7 +89,7 @@
 				</ul>
 				<div class="button">Order</div>
 				<p>starting at $39.99</p>
-				<img src="assets/images/potato1-1.png"/>
+				<img class="potato-team" src="assets/images/potato1-1.png"/>
 			</div>
 		</div>
   </section>
