--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Friendly Potato | Betamore</title>
     <meta name="description" content="Betamore Beta Potato">
     <link rel="stylesheet" href="css/main.css">
+      <link href="css/foundation.css" rel="stylesheet" type="text/css" />
+  <link href="css/twentytwenty.css" rel="stylesheet" type="text/css" />
 
   </head>
 
@@ -43,6 +45,15 @@
   <section id="features" class="transform">
     <h1>Easily Transformable</h1>
     <p>Because of its unique structure. <span>Potato&trade;</span> is easily<Br>usable and transformable in any way you can think of.</p>
+     <div class="row">
+      <div class="large-6 columns">
+        <div class="twentytwenty-container">
+          <img  src="assets/images/potato.jpg" />
+          <img  src="assets/images/chips.jpg" />
+        </div>
+      </div>
+    </div>
+
   
 
   </section>
@@ -50,7 +61,7 @@
   <section class="customer">
     <h1>100% Customer satisfaction!</h1>
     <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
-  </section>
+         </section>
 
   <section id="buynow"  class="buy">
     <h1>Order one (or more) today!</h1>
@@ -99,6 +110,16 @@
 </footer>
 
 <script src="js/script.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="js/jquery.event.move.js"></script>
+    <script src="js/jquery.twentytwenty.js"></script>
+    <script>
+    $(window).load(function(){
+      $(".twentytwenty-container[data-orientation!='vertical']").twentytwenty({default_offset_pct: 0.7});
+      $(".twentytwenty-container[data-orientation='vertical']").twentytwenty({default_offset_pct: 0.3, orientation: 'vertical'});
+    });
+    </script>
+
 
 </body>
 
