removed unnecessary script from html file

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section id="about" class="transparent">
     <h1>Different shapes and sizes</h1>
     <p><span>Potato&trade;</span> comes in many different unique shapes and sizes.<br> Find the one that fits your personal preferences.</p>
-    <img  src="assets/images/potatoline.png"/>
+    <img src="assets/images/potatoline.png">
     <img src="assets/images/potato2.png"/>
   </section>
 
@@ -116,7 +116,7 @@
     <script>
     $(window).load(function(){
       $(".twentytwenty-container[data-orientation!='vertical']").twentytwenty({default_offset_pct: 0.7});
-      $(".twentytwenty-container[data-orientation='vertical']").twentytwenty({default_offset_pct: 0.3, orientation: 'vertical'});
+     
     });
     </script>
 
