add Google Font: Source Sans Pro and update main.css with new font style

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Friendly Potato | Betamore</title>
     <meta name="description" content="Betamore Beta Potato">
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
       <link href="css/foundation.css" rel="stylesheet" type="text/css" />
   <link href="css/twentytwenty.css" rel="stylesheet" type="text/css" />
@@ -39,7 +40,7 @@
     <h1>Is Potato&trade; healthy? Yes it is!</h1>
     <p>The majority of carbohydrates in potatoes are complex<Br>carbohydrates, your body's main energy source.</p>
     <img class="nutrition-potato" src="assets/images/potato.png"/>
-   
+
   </section>
 
   <section id="features" class="transform">
@@ -54,7 +55,7 @@
       </div>
     </div>
 
-  
+
 
   </section>
 
