--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section id="about" class="transparent">
     <h1>Different shapes and sizes</h1>
     <p><span>Potato&trade;</span> comes in many different unique shapes and sizes.<br> Find the one that fits your personal preferences.</p>
-    <img  src="assets/images/potatoline.png"/>
+    <img id="potatoline" src="assets/images/potatoline2.png"/>
     <img src="assets/images/potato2.png"/>
   </section>
 
