--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Friendly Potato | Betamore</title>
     <meta name="description" content="Betamore Beta Potato">
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
       <link href="css/foundation.css" rel="stylesheet" type="text/css" />
   <link href="css/twentytwenty.css" rel="stylesheet" type="text/css" />
