start working on footer section

--- a/index.html
+++ b/index.html
@@ -10,119 +10,126 @@
 
   </head>
 
-<body>
-  <header class="clearfix">
-  	<a href="/"><h1 class="logo">Potato&trade;</h1></a>
-    <nav><!--Add whatever navigation tools here -->
-      <ul>
-        <li><a href="#about" onclick="aboutScroll()">About</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#nutrition">Nutrition</a></li>
-        <li><a class="buy-now" href="#buynow">Buy It Now</a></li>
-      </ul>
-    </nav>
-  </header>
+  <body>
+    <header>
+    	<a href="/"><h1 class="logo">Potato&trade;</h1></a>
+      <nav> <!-- This is the Main Nav -->
+        <ul>
+          <li><a href="#about" onclick="aboutScroll()">About</a></li>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#nutrition">Nutrition</a></li>
+          <li><a class="buy-now" href="#buynow">Buy It Now</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <section  class="splash">
-    <h1>"Sweet, Nutritious, and Delicious"</h1>
-    <p>The key to happiness is hidden in the <span>Potato&trade;</span></p>
-    <img src="assets/images/potato1.png"/>
-  </section>
+    <section  class="splash">
+      <h1>"Sweet, Nutritious, and Delicious"</h1>
+      <p>The key to happiness is hidden in the <span>Potato&trade;</span></p>
+      <img src="assets/images/potato1.png"/>
+    </section>
 
-  <section id="about" class="transparent">
-    <h1>Different shapes and sizes</h1>
-    <p><span>Potato&trade;</span> comes in many different unique shapes and sizes.<br> Find the one that fits your personal preferences.</p>
-    <img id="potatoline" src="assets/images/potatoline2.png"/>
-    <img src="assets/images/potato2.png"/>
-  </section>
+    <section id="about" class="transparent">
+      <h1>Different shapes and sizes</h1>
+      <p><span>Potato&trade;</span> comes in many different unique shapes and sizes.<br> Find the one that fits your personal preferences.</p>
+      <img id="potatoline" src="assets/images/potatoline2.png"/>
+      <img src="assets/images/potato2.png"/>
+    </section>
 
-  <section id="nutrition" class="nutrition">
-    <h1>Is Potato&trade; healthy? Yes it is!</h1>
-    <p>The majority of carbohydrates in potatoes are complex<Br>carbohydrates, your body's main energy source.</p>
-    <img class="nutrition-potato" src="assets/images/potato.png"/>
+    <section id="nutrition" class="nutrition">
+      <h1>Is Potato&trade; healthy? Yes it is!</h1>
+      <p>The majority of carbohydrates in potatoes are complex<Br>carbohydrates, your body's main energy source.</p>
+      <img class="nutrition-potato" src="assets/images/potato.png"/>
 
-  </section>
+    </section>
 
-  <section id="features" class="transform">
-    <h1>Easily Transformable</h1>
-    <p>Because of its unique structure. <span>Potato&trade;</span> is easily<Br>usable and transformable in any way you can think of.</p>
-     <div class="row">
-      <div class="large-6 columns">
-        <div class="twentytwenty-container">
-          <img  src="assets/images/potato.jpg" />
-          <img  src="assets/images/chips.jpg" />
+    <section id="features" class="transform">
+      <h1>Easily Transformable</h1>
+      <p>Because of its unique structure. <span>Potato&trade;</span> is easily<Br>usable and transformable in any way you can think of.</p>
+       <div class="row">
+        <div class="large-6 columns">
+          <div class="twentytwenty-container">
+            <img  src="assets/images/potato.jpg" />
+            <img  src="assets/images/chips.jpg" />
+          </div>
         </div>
       </div>
-    </div>
 
 
 
-  </section>
+    </section>
 
-  <section class="customer">
-    <h1>100% Customer satisfaction!</h1>
-    <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
-         </section>
+    <section class="customer">
+      <h1>100% Customer satisfaction!</h1>
+      <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
+           </section>
 
-  <section id="buynow"  class="buy">
-    <h1>Order one (or more) today!</h1>
-    <div>
-			<div>
-				<h2><span>Potato&trade;</span> Lite</h2>
-				<ul>
-					<li>Small and compact</li>
-					<li>Highly portable</li>
-					<li>Unapologetically delicious</li>
-				</ul>
-				<div class="button">Order</div>
-				<p>starting at $9.99</p>
-				<img class="potato-lite" src="assets/images/potatosmall.png"/>
-			</div>
-			<div>
-				<h2><span>Potato&trade;</span> Pro</h2>
-				<ul>
-					<li>Highly portable</li>
-					<li>Easily sliceable</li>
-					<li>Unapologetically delicious</li>
-					<li>Very nutritious</li>
-				</ul>
+    <section id="buynow"  class="buy">
+      <h1>Order one (or more) today!</h1>
+      <div>
+  			<div>
+  				<h2><span>Potato&trade;</span> Lite</h2>
+  				<ul>
+  					<li>Small and compact</li>
+  					<li>Highly portable</li>
+  					<li>Unapologetically delicious</li>
+  				</ul>
+  				<div class="button">Order</div>
+  				<p>starting at $9.99</p>
+  				<img class="potato-lite" src="assets/images/potatosmall.png"/>
+  			</div>
+  			<div>
+  				<h2><span>Potato&trade;</span> Pro</h2>
+  				<ul>
+  					<li>Highly portable</li>
+  					<li>Easily sliceable</li>
+  					<li>Unapologetically delicious</li>
+  					<li>Very nutritious</li>
+  				</ul>
 
-				<div class="button">Order</div>
-				<p>starting at $19.99</p>
-				<img class="potato-pro" src="assets/images/potato-3.png"/>
-			</div>
-			<div>
-				<h2><span>Potato&trade;</span> Team</h2>
-				<ul>
-					<li>Ideal for bigger groups</li>
-					<li>Easily sliceable</li>
-					<li>Unapologetically delicious</li>
-					<li>Very nutritious</li>
-				</ul>
-				<div class="button">Order</div>
-				<p>starting at $39.99</p>
-				<img class="potato-team" src="assets/images/potato1-1.png"/>
-			</div>
-		</div>
-  </section>
+  				<div class="button">Order</div>
+  				<p>starting at $19.99</p>
+  				<img class="potato-pro" src="assets/images/potato-3.png"/>
+  			</div>
+  			<div>
+  				<h2><span>Potato&trade;</span> Team</h2>
+  				<ul>
+  					<li>Ideal for bigger groups</li>
+  					<li>Easily sliceable</li>
+  					<li>Unapologetically delicious</li>
+  					<li>Very nutritious</li>
+  				</ul>
+  				<div class="button">Order</div>
+  				<p>starting at $39.99</p>
+  				<img class="potato-team" src="assets/images/potato1-1.png"/>
+  			</div>
+  		</div>
+    </section>
 
-<footer>
+  <footer>
+    <p>Since you came here to read this, have one potato for free!<br />
+       Copyright &copy; 2015 <span>Potato&trade;</span> All rights reserved</p>
+    <ul class="footer-nav"> <!-- This is the Footer Nav -->
+      <li><a href="#">History</a></li>
+      <li><a href="#about" onclick="aboutScroll()">About</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Free Potato</a></li>
+    </ul>
+  </footer>
 
-</footer>
-
-<script src="js/script.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="js/jquery.event.move.js"></script>
-    <script src="js/jquery.twentytwenty.js"></script>
-    <script>
-    $(window).load(function(){
-      $(".twentytwenty-container[data-orientation!='vertical']").twentytwenty({default_offset_pct: 0.7});
-      $(".twentytwenty-container[data-orientation='vertical']").twentytwenty({default_offset_pct: 0.3, orientation: 'vertical'});
-    });
-    </script>
+  <script src="js/script.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+      <script src="js/jquery.event.move.js"></script>
+      <script src="js/jquery.twentytwenty.js"></script>
+      <script>
+      $(window).load(function(){
+        $(".twentytwenty-container[data-orientation!='vertical']").twentytwenty({default_offset_pct: 0.7});
+        $(".twentytwenty-container[data-orientation='vertical']").twentytwenty({default_offset_pct: 0.3, orientation: 'vertical'});
+      });
+      </script>
 
 
-</body>
+  </body>
 
 
 </html>
