clean up 'Buy' section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="customer">
       <h1>100% Customer satisfaction!</h1>
       <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
-           </section>
+    </section>
 
     <section id="buynow"  class="buy">
       <h1>Order one (or more) today!</h1>
@@ -74,8 +74,8 @@
   					<li>Highly portable</li>
   					<li>Unapologetically delicious</li>
   				</ul>
-  				<div class="button">Order</div>
-  				<p>starting at $9.99</p>
+  				<div class="button"><a href="#">Order</a></div>
+  				<small>starting at $9.99</small>
   				<img class="potato-lite" src="assets/images/potatosmall.png"/>
   			</div>
   			<div>
@@ -86,9 +86,8 @@
   					<li>Unapologetically delicious</li>
   					<li>Very nutritious</li>
   				</ul>
-
-  				<div class="button">Order</div>
-  				<p>starting at $19.99</p>
+  				<div class="button"><a href="#">Order</a></div>
+  				<small>starting at $19.99</small>
   				<img class="potato-pro" src="assets/images/potato-3.png"/>
   			</div>
   			<div>
@@ -99,8 +98,8 @@
   					<li>Unapologetically delicious</li>
   					<li>Very nutritious</li>
   				</ul>
-  				<div class="button">Order</div>
-  				<p>starting at $39.99</p>
+  				<div class="button"><a href="#">Order</a></div>
+  				<small>starting at $39.99</small>
   				<img class="potato-team" src="assets/images/potato1-1.png"/>
   			</div>
   		</div>
