add comment to 'Buy' section of index.html page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
     </section>
 
     <section id="buynow"  class="buy">
+      <!-- Ideally we would have used Flexbox in this section,
+      but I didn't want to spend time going back through all of
+      the markup, CSS rules, etc. What we have now is passable
+      (at least on desktops/laptops :) -->
       <h1>Order one (or more) today!</h1>
       <div>
   			<div>
