start on 'Customer Satisfaction' section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
 
     <section class="customer">
       <h1>100% Customer satisfaction!</h1>
-      <!-- DON't KNOW HOW TO PUT THE CONTENTS HERE -->
+      <div id="testimonial-slides">
+        <blockquote>I was skeptical at first, but when I tried potato for the first time my life completely changed! I'm a better person now. Everything is better with potato.</blockquote>
+        <blockquote>I was skeptical at first, but when I tried potato for the first time my life completely changed! I'm a better person now. Everything is better with potato.</blockquote>
+        <blockquote>I was skeptical at first, but when I tried potato for the first time my life completely changed! I'm a better person now. Everything is better with potato.</blockquote>
+      </div>
     </section>
 
     <section id="buynow"  class="buy">
