slider tracker style

--- a/index.html
+++ b/index.html
@@ -61,11 +61,32 @@
 
     <section class="customer">
       <h1>100% Customer satisfaction!</h1>
-      <div class="testimonial-slides">
-        <blockquote>I was skeptical at first, but when I tried potato for the first time my life completely changed! I'm a better person now. Everything is better with potato.</blockquote>
-       
-      </div>
-    </section>
+      <div class="slides">
+        <blockquote>
+          I was skeptical at first, but when I tried potato for the first time my
+          life completely changed! I'm a better person now. Everything is better
+          with potato.
+          <footer>
+            <span>Jane Doe</span>, single mom
+          </footer>
+        </blockquote>
+        <blockquote>
+          I was skeptical at first, but when I tried potato for the first time my
+          life completely changed! I'm a better person now. Everything is better
+          with potato.
+          <footer>
+            <span>Jane Doe</span>, single mom
+          </footer>
+        </blockquote>
+        <blockquote>
+          I was skeptical at first, but when I tried potato for the first time my
+          life completely changed! I'm a better person now. Everything is better
+          with potato.
+          <footer>
+            <span>Jane Doe</span>, single mom
+          </footer>
+        </blockquote>
+      </div>    </section>
 
     <section id="buynow"  class="buy">
       <!-- Ideally we would have used Flexbox in this section,
